--- a/slides/360px/25/index.html
+++ b/slides/360px/25/index.html
@@ -97,14 +97,14 @@
     <div class="reveal">
         <div class="slides">
             <section><h1>25. सैतान कर चलते यीसु कर परीक्षा</h1><h3>A Bible story from: Matthew 4:1-11; Mark 1:12-13; Luke 4:1-13</h3><div class="uwchecking"><a href="https://unfoldingword.org/quality/" target="_blank"><img src="https://api.unfoldingword.org/obs/jpg/1/checkinglevels/uW-Level1-64px.png" /></a></section>
-<section data-background="https://api.unfoldingword.org/obs/jpg/1/sgj/360px/obs-sgj-25-01.jpg"><p>ईसू कर बपतिसमा लेहे कर ढ़ेरेच हालु, पवितर आतमा हर ओकर अगुवाई करिस, जीहाँ ओहर चालीस दिन अऊ चालीस राएत उपवास करीस| तेकर सैतानहर ईसू जग आईस कि पाप करे बर आकेला ललचुआए|</p></section>
-<section data-background="https://api.unfoldingword.org/obs/jpg/1/sgj/360px/obs-sgj-25-02.jpg"><p>सैतानहर ईसू ला ए कहीके ललचुआईस “अगर तैँ परमेसवर कर बेटा होबे, त ए पखना ला रोटी में बदेल दे, अऊ तैँ खाए सकबे|</p></section>
-<section data-background="https://api.unfoldingword.org/obs/jpg/1/sgj/360px/obs-sgj-25-03.jpg"><p>ईसू हर कहीस ’“परमेसवर कर वचन में लिखल हवे”आदमी केवल रोटी खाए के नई जीए, लेकिन ओके परमेसवर कर कहल गोईठ हर जरूरी हवे|</p></section>
-<section data-background="https://api.unfoldingword.org/obs/jpg/1/sgj/360px/obs-sgj-25-04.jpg"><p>तेकर सैतानहर ईसू ला मंदिर कर सबले ऊपर जगहा में ठदुआए देहीस अऊ कहिस“अगर तैँ परमेसवर कर बेटा होबे, त अपने ला खाल्हे गिराए दे काबर कि लिखिस हवे”परमेसवर हर अपन सवरगदूत मन ला कहि की तुहँला बचाये लेही कि तोर गोड़ हर पखना में झईन छुआए|</p></section>
-<section data-background="https://api.unfoldingword.org/obs/jpg/1/sgj/360px/obs-sgj-25-05.jpg"><p>ईसू हर सैतानला कहिस “परमेसवर कर वचन में लिखल हवे कि तैं अपन प्रभु परमेसवर कर परीक्षा झईन करबे|</p></section>
-<section data-background="https://api.unfoldingword.org/obs/jpg/1/sgj/360px/obs-sgj-25-06.jpg"><p>तेकर सैतानहर ईसू ला दुनिया भर कर सब राएज अऊ ओकर आदर समान ला देखाईस अऊ कहिस “अगर तैं गोडे गीर के मोकेला जोहारबे त ए जम जाएत ला मैं तोके दे देहुँ|”</p></section>
-<section data-background="https://api.unfoldingword.org/obs/jpg/1/sgj/360px/obs-sgj-25-07.jpg"><p>ईसू हर कहिस “सैतानमोर जग ले दुरिहां भाएग जा| परमेसवर कर वचन में ओ लोग मन ला कहिस हवे कि तैं अपन प्रभु परमेसवरके जोहारबे, अऊ केवल ओकरेच सेवा करबे|</p></section>
-<section data-background="https://api.unfoldingword.org/obs/jpg/1/sgj/360px/obs-sgj-25-08.jpg"><p>ईसू सैतानकर परीक्षा में नई फँसीस ओकरेले सैतानहर ईसू ला छोंएड़ के चईल गईस| तेकर सवरगदुत मन आईन अऊ ईसू कर सेवा करीन|</p></section>
+<section data-background="https://api.unfoldingword.org/obs/jpg/1/sgj/360px/obs-sgj-25-01.jpg"><p>ईसू कर बपतिसमा लेहे कर ढ़ेरेच हालु, पवितर आतमा हर ओकर अगुवाई करिस, जीहाँ ओहर चालीस दिन अऊ चालीस राएत उपवास करीस। तेकर सैतानहर ईसू जग आईस कि पाप करे बर आकेला ललचुआए।</p></section>
+<section data-background="https://api.unfoldingword.org/obs/jpg/1/sgj/360px/obs-sgj-25-02.jpg"><p>सैतानहर ईसू ला ए कहीके ललचुआईस “अगर तैँ परमेसवर कर बेटा होबे, त ए पखना ला रोटी में बदेल दे, अऊ तैँ खाए सकबे।</p></section>
+<section data-background="https://api.unfoldingword.org/obs/jpg/1/sgj/360px/obs-sgj-25-03.jpg"><p>ईसू हर कहीस ’“परमेसवर कर वचन में लिखल हवे”आदमी केवल रोटी खाए के नई जीए, लेकिन ओके परमेसवर कर कहल गोईठ हर जरूरी हवे।</p></section>
+<section data-background="https://api.unfoldingword.org/obs/jpg/1/sgj/360px/obs-sgj-25-04.jpg"><p>तेकर सैतानहर ईसू ला मंदिर कर सबले ऊपर जगहा में ठदुआए देहीस अऊ कहिस“अगर तैँ परमेसवर कर बेटा होबे, त अपने ला खाल्हे गिराए दे काबर कि लिखिस हवे”परमेसवर हर अपन सवरगदूत मन ला कहि की तुहँला बचाये लेही कि तोर गोड़ हर पखना में झईन छुआए।</p></section>
+<section data-background="https://api.unfoldingword.org/obs/jpg/1/sgj/360px/obs-sgj-25-05.jpg"><p>ईसू हर सैतानला कहिस “परमेसवर कर वचन में लिखल हवे कि तैं अपन प्रभु परमेसवर कर परीक्षा झईन करबे।</p></section>
+<section data-background="https://api.unfoldingword.org/obs/jpg/1/sgj/360px/obs-sgj-25-06.jpg"><p>तेकर सैतानहर ईसू ला दुनिया भर कर सब राएज अऊ ओकर आदर समान ला देखाईस अऊ कहिस “अगर तैं गोडे गीर के मोकेला जोहारबे त ए जम जाएत ला मैं तोके दे देहुँ।”</p></section>
+<section data-background="https://api.unfoldingword.org/obs/jpg/1/sgj/360px/obs-sgj-25-07.jpg"><p>ईसू हर कहिस “सैतानमोर जग ले दुरिहां भाएग जा। परमेसवर कर वचन में ओ लोग मन ला कहिस हवे कि तैं अपन प्रभु परमेसवरके जोहारबे, अऊ केवल ओकरेच सेवा करबे।</p></section>
+<section data-background="https://api.unfoldingword.org/obs/jpg/1/sgj/360px/obs-sgj-25-08.jpg"><p>ईसू सैतानकर परीक्षा में नई फँसीस ओकरेले सैतानहर ईसू ला छोंएड़ के चईल गईस। तेकर सवरगदुत मन आईन अऊ ईसू कर सेवा करीन।</p></section>
 <section><a href="../26/index.html"><p>आगू कर पाठ</p></a></section>
             </div>
         </div>
